Security Oracle v 1.0.0
